fix tailwind dark mode theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
+/* @custom-variant dark (&:where(.dark, .dark *));
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *)); */
+
 @import "tailwindcss";
-body {
-    background-color: #F1DFDF;
-}
